clang/test/BSC/Negative/Method/Struct/struct_toplevel_func_not_found/struct_toplevel_func_not_found.cbs
// RUN: %clang_cc1 -verify %s

struct F {
};
void struct F::increase(struct F* this) { 
    
}

int main() {
    increase(); //expected-error {{use of undeclared identifier 'increase'}}
    return 0;
}